Import of RRWO/Class-Tie-InsideOut-0.021 from CPAN.
gitpan-cpan-distribution: Class-Tie-InsideOut
gitpan-cpan-version:      0.021
gitpan-cpan-path:         RRWO/Class-Tie-InsideOut-0.021.tar.gz
gitpan-cpan-author:       RRWO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension Tie::InsideOut.
 
-0.02
+0.021 Mon Feb 13 2006
+	- removed namespace validation, which was too strict
+
+0.02  Mon Feb 13 2006
 	- added more tests
 	- fixed namespace validation
 	- checks that the symbol used for the key is a hash
